clean up dependencies / fix tables being too wide for screen

--- a/News-Android-App/src/main/assets/web.css
+++ b/News-Android-App/src/main/assets/web.css
@@ -99,7 +99,7 @@ a {
 
 #content table {
     width:100% !important;
-    table-layout:fixed;
+    /* table-layout: fixed; */
 }
 
 #header {
